# cf-genie

./: .gitignore  README.md  check_lint.sh  cleanup_models.sh  dev_requirements.txt  docker-compose.yml  environment.yml  generate_vscode_launch_json.sh  hyperopt-worker.sh  lint_project.sh  logger.py  main.py  make_backup.sh  pyproject.toml  requirements.txt  run_all.sh  setup.cfg  task_runner.py  utils.py
cf_genie/: logger.py
cf_genie/embedders/: __init__.py  base.py  doc2vec.py  fasttext.py  tfidf.py
cf_genie/models/: __init__.py  base.py  complement_naive_bayes.py  kmeans.py  logistic_regression.py  lstm.py  mlp.py  model_analyisis.py  model_runner.py  multinomial_naive_bayes.py  random_forest.py
cf_genie/tasks/: balance_dataset.py  cleanup_dataset.py  cleanup_dataset_task.py  correlation_matrix_for_tags.py  doc2vec_hyperopt.py  doc2vec_poc.py  embed_datasets.py  fasttext_hyperopt.py  gen_latex_report_for_metrics.py  generate_doc2vec.py  generate_latex_report_for_metrics.py  generate_temp_input_for_raw_dataset.py  generate_wordclouds.py  load_cf_data.py  models_poc.py  models_with_all_data_poc.py  plot_histogram_for_tag_group.py  plot_statistics_for_tag_group.py  predict_problem.py  predict_problems_for_magiccp.py  result_analysis.py  run_stats_on_embedded_data.py  run_with_magic_cp.py  scrap_dataset.py  split_training_and_test.py  unsupervised_poc.py
cf_genie/utils/: __init__.py  cf_api.py  cf_dataset.py  cf_utils.py  constants.py  exceptions.py  model_runner.py  (+6 more)
utils/: __init__.py  plots.py  preprocess.py  read_write_dataset.py  read_write_files.py  utils.py
(+1 files in other folders)
