[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-genie"
version = "0.0.1"
authors = [
  { name="German Robayo", email="germanrobayo33@gmail.com" },
]
description = "Codeforces problem category detector"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/magic-cp/cf-genie"
"Bug Tracker" = "https://github.com/magic-cp/cf-genie/issues"

[tool.setuptools]
packages = ["cf_genie"]

[tool.autopep8]
statistics = true
max_line_length = 120

[tool.isort]
